2004-09-01  Simon Josefsson  <jas@extundo.com>

	* message.el (message-canlock-generate): Require sha1, not
	sha1-el.  (Can we get rid of this require alltogheter? It is ugly
	to require within a function.  Sadly, if sha1.el isn't loaded, the
	let binding in m-c-g will hide the defcustom definition, which is
	bad.)

	* canlock.el: Require sha1, not sha1-el.

	* message.el: Don't autoload sha1 (there is a autoload cookie in
	sha1.el).

	* sha1-el.el: Renamed to sha1.el.

2004-08-30  Juanma Barranquero  <lektu@terra.es>

	* ietf-drums.el (ietf-drums-remove-whitespace): Fix character constant.

2004-08-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-demule): Avoid string-as-multibyte.

2004-08-30  Kim F. Storm  <storm@cua.dk>

	* nntp.el (nntp-authinfo-file): Add :group 'nntp.

	* nnimap.el (nnimap-authinfo-file, nnimap-prune-cache):
	Add :group 'nnimap.

2004-08-30  Simon Josefsson  <jas@extundo.com>

	* rfc2231.el (rfc2231-parse-string): Restore whitespace syntax for
	?* and ?\; (tiny patch).  From Andreas Schwab <schwab@suse.de>.

2004-08-30  Simon Josefsson  <jas@extundo.com>

	* ietf-drums.el (ietf-drums-syntax-table): Set syntax of ?* ?\;
	and ?\' to symbol instead of whitespace (tiny patch).  From
	Andreas Schwab <schwab@suse.de>.

2004-08-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-agent.el (gnus-agent-restore-gcc): Use ^ and regexp-quote.

	* gnus-sum.el (gnus-summary-morse-message): Use search-forward
	instead of re-search-forward.

	* gnus-uu.el (gnus-uu-save-article): Ditto.
	(gnus-uu-post-encode-uuencode): Ditto.

	* html2text.el (html2text-clean-list-items): Ditto.
	(html2text-clean-dtdd): Ditto.
	(html2text-format-tags): Ditto.

	* message.el (message-send-mail-with-sendmail): Fix regexp.
	(message-fill-field-general): Use search-forward instead of
	re-search-forward.
	(unbold-region): Ditto.

	* nnrss.el (nnrss-request-article): Ditto.

	* nnslashdot.el (nnslashdot-request-article): Ditto.
