@@ -1,3 +1,7 @@
+2004-09-02  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* gnus-picon.el: Fix indentation and closing parenthesis.
+
 2004-09-01  Simon Josefsson  <jas@extundo.com>
 
 	* message.el (message-canlock-generate): Require sha1, not
